# rust_bluepill_minimal_template

./: .gitignore  Cargo.toml  stm32f103c8_blue_pill.cfg
.cargo/: config
examples/: blinky.rs  boiler_plate.rs  gpio_inputs.rs
src/: main.rs
